    dh_installinit. update-rc.d is not supporting that for quite some time
  * debian/plymouth.postinst: Remove old cleanup code needed for early 0.9.0
    uploads
  * debian/control: Bump Standards-Version to 4.5.0 (no further changes)
  * Bump debhelper compatibility to 12, switch from dh_systemd_start to
    dh_installsystemd

  [ Alper Nebi Yasak ]
  * Include less modules when appropriate. (Closes: #940014)

 -- Laurent Bigonville <bigon@debian.org>  Fri, 24 Jan 2020 05:35:35 +0100

plymouth (0.9.4-1.1) unstable; urgency=medium

  [ Andreas Henriksson ]
  * Pass SYSTEMD_ASK_PASSWORD_AGENT=/bin/systemd-tty-ask-password-agent
    to configure for reproducibility on merged-usr vs non-merged.
    (Closes: #915213)

  [ Jonathan Carter ]
  * Non-maintainer upload (co-ordinated with bigon)
  * Set default plymouth theme

 -- Jonathan Carter <jcc@debian.org>  Mon, 08 Apr 2019 14:17:05 +0200

plymouth (0.9.4-1) unstable; urgency=medium

  [ Ondřej Nový ]
  * d/copyright: Use https protocol in Format field

  [ Laurent Bigonville ]
  * New upstream version 0.9.3
    - Add support screen rotation (Closes: #905429)
    - Drop patches merged upstream
    - debian/patches/0005-cmdline.patch: Refreshed
    - debian/libplymouth4.symbols: Add newly exported symbols
  * debian/control: Bump Standards-Version to 4.2.1 (no further changes)
  * Do not explicitly set the compression algorithm, to please lintian
  * debian/rules: Use dh_missing --fail-missing instead of dh_install

 -- Laurent Bigonville <bigon@debian.org>  Thu, 08 Nov 2018 02:03:31 +0100

plymouth (0.9.3-3) unstable; urgency=medium

  * debian/local/plymouth.hook: Call fc-cache when generating the initramfs,
    this will create the fc cache and .uuid files and should mitigate bug
    #897572
  * debian/control: Update VCS-* fields to point to the salsa machine

 -- Laurent Bigonville <bigon@debian.org>  Mon, 14 May 2018 11:25:26 +0200

plymouth (0.9.3-2) unstable; urgency=medium
