@@ -3,14 +3,10 @@
 set -e
 
 case "${1}" in
-	configure)
-		if which update-initramfs >/dev/null 2>&1; then
+	configure|abort-upgrade|abort-remove|abort-deconfigure)
+		if which update-initramfs >/dev/null 2>&1 && [ -e /etc/initramfs-tools/initramfs.conf ]; then
 			update-initramfs -u
 		fi
-		;;
-
-	abort-upgrade|abort-remove|abort-deconfigure)
-
 		;;
 
 	*)
