@@ -10,11 +10,13 @@ plymouth (0.9.4-2) UNRELEASED; urgency=medium
   * debian/control: Bump Standards-Version to 4.5.0 (no further changes)
   * Bump debhelper compatibility to 12, switch from dh_systemd_start to
     dh_installsystemd
+  * debian/rules: Disable call to dh_installinitramfs, let's manage that
+    ourself but update the maintainer scripts to mimic what it's doing.
 
   [ Alper Nebi Yasak ]
   * Include less modules when appropriate. (Closes: #940014)
 
- -- Laurent Bigonville <bigon@debian.org>  Fri, 24 Jan 2020 05:35:35 +0100
+ -- Laurent Bigonville <bigon@debian.org>  Fri, 24 Jan 2020 06:17:42 +0100
 
 plymouth (0.9.4-1.1) unstable; urgency=medium
 
